--- a/analysis/04_eating_disorder_plots.Rmd
+++ b/analysis/04_eating_disorder_plots.Rmd
@@ -54,16 +54,50 @@ df_ed_share_month %>%
   pivot_longer(ends_with("_prop"), names_to = "f50_prop_type", values_to = "f50_props") %>% 
   ggplot(aes(x = adm_year_month, y = f50_props, group = f50_prop_type)) + 
   geom_col(aes(fill = f50_prop_type)) +
-  scale_fill_discrete(name = "ES Diagnose", labels = c("AN", "BN", "aES")) +
+  scale_fill_discrete(name = "ED Type", labels = c("AN", "BN", "oED")) +
   # geom_line(aes(colour = f50_prop_type)) +
   guides(x = guide_axis(angle = -90)) + 
   geom_vline(aes(xintercept = "2020.3"), show.legend = FALSE) +
   # labs(title = "Proportion of cases with F50.* diagnoses per month", 
   #      x = "Year.Month", y = "cases with F50.* diagnosis [%]") +
-  labs(title = "Prozentualer Anteil an Fällen mit Essstörungs-Diagnose pro Monat", 
-       x = "Jahr.Monat", y = "Anteil der Fälle mit ES-Diagnose [%]") +
-  geom_text(aes(x = "2020.3", y = 30, label = "Beginn\nCorona-\nPandemie", hjust = "left", vjust = "top"),
+  labs(title = "monthly share of cases with ED diagnosis", 
+       x = "Year.Month", y = "share of cases with ED diagnosis [%]") +
+  geom_text(aes(x = "2020.3", y = 30, label = "Begin of\nCovid \npandemic", hjust = "left", vjust = "top"),
             nudge_x = 0.3, nudge_y = 0.5) +
+  theme_classic()
+```
+
+### lockdown periods within covid pandemic
+```{r}
+df_ed_share_week <- df_ed %>% 
+  arrange(adm_date) %>% 
+  group_by(adm_week) %>% 
+  summarise(#F50_prop = sum(icd_f50 == "F50+")/n()*100, 
+            AN_prop = sum(f50_type == "Anorexie")/n()*100,
+            BN_prop = sum(f50_type == "Bulimie")/n()*100,
+            ED_sonst_prop = sum(f50_type == "Essstörung Sonst.")/n()*100) %>% 
+  pivot_longer(ends_with("_prop"), names_to = "f50_prop_type", values_to = "f50_props") %>% 
+  filter(adm_week >= "2020.10")
+
+df_ed_share_week %>% 
+  ggplot(aes(x = adm_week, y = f50_props, group = f50_prop_type)) + 
+  geom_col() +
+  geom_rect(data = df_lockdown_periods %>% filter(state == "Hessen", measure == "school"),
+            mapping = aes(xmin = start_week, xmax = end_week, group = subperiod_i, alpha = ordered(status)),
+            ymin = 0, ymax = 100, fill = scales::alpha("black", 0.2), inherit.aes = FALSE) +
+  scale_alpha_ordinal(range = c(0.2, 0.5),
+                      name = "Lockdown status", labels = c("1" = "partial", "2" = "full (incl. holidays)")) +
+  geom_col(aes(fill = f50_prop_type)) +
+  scale_fill_discrete(name = "ED Type", labels = c("AN", "BN", "oED")) +
+  scale_x_discrete(breaks = levels(df_ed_share_week$adm_week)[seq(1, length(levels(df_ed_share_week$adm_week)), 2)],
+                   guide = guide_axis(angle = -90)) +
+  # guides(x = guide_axis(angle = -90)) + 
+  labs(title = "weekly share of cases with ED diagnosis during Covid pandemic", 
+       x = "Year.Week", y = "share of cases with ED diagnosis [%]") +
+  # geom_text(aes(x = "2020.11", y = 95, label = "1. Schulschließung", hjust = "left", vjust = "top"),
+  #           nudge_x = 1, nudge_y = 0.5) +
+  # geom_text(aes(x = "2021.2", y = 95, label = "2. Schulschließung", hjust = "left", vjust = "top"),
+  #           nudge_x = 1, nudge_y = 0.5) +
   theme_classic()
 ```
 
@@ -92,6 +126,7 @@ df_ed_share_month_yearly %>%
   mutate(covid_pan = if_else(adm_year == 2016, "baseline", "dur_covid")) %>% 
   ggplot(aes(x = adm_year_month, y = AN_prop, group = covid_pan)) +
   geom_line(aes(colour = covid_lockd)) +
+  guides(x = guide_axis(angle = -90)) + 
   # scale_colour_discrete(name = "year") +
   # labs(title = "...",
   #      x = "month", y = "... [%]") +
@@ -117,7 +152,7 @@ df_ed_share_re_adm <- df_ed %>%
 df_ed_share_re_adm %>%
   ggplot(aes(x = adm_quarter, y = re_adm_soon_prop, group = icd_f50)) +
   geom_line(aes(colour = icd_f50)) +
-  scale_colour_discrete(name = "ED Diagnosis") +
+  scale_colour_discrete(name = "ED Diagnosis", labels = c("no ED", "ED")) +
   # geom_line(aes(colour = f50_prop_type)) +
   guides(x = guide_axis(angle = -90)) +
   geom_vline(aes(xintercept = "2020.2"), show.legend = FALSE) +
@@ -130,42 +165,26 @@ df_ed_share_re_adm %>%
   theme_classic()
 ```
 
-
-### lockdown periods within covid pandemic
+## share of first presentations
 ```{r}
-df_ed_share_week <- df_ed %>% 
-  arrange(adm_date) %>% 
-  group_by(adm_week) %>% 
-  summarise(#F50_prop = sum(icd_f50 == "F50+")/n()*100, 
-            AN_prop = sum(f50_type == "Anorexie")/n()*100,
-            BN_prop = sum(f50_type == "Bulimie")/n()*100,
-            ED_sonst_prop = sum(f50_type == "Essstörung Sonst.")/n()*100) %>% 
-  pivot_longer(ends_with("_prop"), names_to = "f50_prop_type", values_to = "f50_props") %>% 
-  filter(adm_week >= "2020.10")
-
-df_ed_share_week %>% 
-  ggplot(aes(x = adm_week, y = f50_props, group = f50_prop_type)) + 
-  geom_col() +
-  geom_rect(data = df_lockdown_periods %>% filter(state == "Hessen", measure == "school"),
-            mapping = aes(xmin = start_week, xmax = end_week, group = subperiod_i, alpha = ordered(status)),
-            ymin = 0, ymax = 100, fill = scales::alpha("black", 0.2), inherit.aes = FALSE) +
-  scale_alpha_ordinal(range = c(0.2, 0.5),
-                      name = "Lockdown status", labels = c("1" = "partial", "2" = "full (incl. holidays)")) +
-  geom_col(aes(fill = f50_prop_type)) +
-  scale_fill_discrete(name = "ES Diagnose", labels = c("AN", "BN", "aES")) +
-  scale_x_discrete(breaks = levels(df_ed_share_week$adm_week)[seq(1, length(levels(df_ed_share_week$adm_week)), 2)],
-                   guide = guide_axis(angle = -90)) +
-  # guides(x = guide_axis(angle = -90)) + 
-  labs(title = "Anteil an Fällen mit Essstörungs-Diagnose während Covid-Pandemie pro Woche", 
-       x = "Jahr.Woche", y = "Anteil der Fälle mit ES-Diagnose [%]") +
-  # geom_text(aes(x = "2020.11", y = 95, label = "1. Schulschließung", hjust = "left", vjust = "top"),
-  #           nudge_x = 1, nudge_y = 0.5) +
-  # geom_text(aes(x = "2021.2", y = 95, label = "2. Schulschließung", hjust = "left", vjust = "top"),
-  #           nudge_x = 1, nudge_y = 0.5) +
+df_ed %>%
+  filter(adm_date >= ymd("2018-03-01"), icd_f50 == "F50+") %>% 
+  mutate(adm_year = year(adm_date) %>% as_factor() %>% fct_recode("baseline" = "2018", "baseline" = "2019"),
+         re_adm_soon = replace_na(re_adm_soon, FALSE)) %>% 
+  group_by(adm_year) %>% 
+  summarise(across(c(is_first_case_rel, re_adm_soon), ~mean(., na.rm = TRUE)*100)) %>% 
+  pivot_longer(c(is_first_case_rel, re_adm_soon), names_to = "variable", values_to = "mean") %>% 
+  ggplot(aes(x = adm_year, y = mean, fill = variable)) +
+  geom_col(position = "dodge") +
+  scale_fill_discrete(name = "Type of encounter", labels = c("First presentation", "Early re-admission")) +
+  labs(title = "Share of first presentations and re-admissions of ED patients over time",
+       y = "Share of cases in all ED cases [%]") +
   theme_classic()
+
 ```
 
-## periods of cases per patient
+
+### periods of cases per patient
 ! WIP, not finalised
 ```{r}
 # downsample F50- to match number of patients with ED. Proportion of F50- to F50+:
