--- a/analysis/04_eating_disorder_plots.Rmd
+++ b/analysis/04_eating_disorder_plots.Rmd
@@ -71,6 +71,7 @@ df_ed_monthly <- df_ed %>%
   sum_ed_abs_props() %>% 
   ungroup()
 
+# relative
 df_ed_monthly %>% 
   ggplot(aes(x = adm_year_month, y = prop, group = f50_type, fill = f50_type)) + 
   geom_area() +
@@ -81,6 +82,20 @@ df_ed_monthly %>%
   labs(title = "monthly share of cases with ED diagnosis", 
        x = "Year.Month", y = "share of cases with ED diagnosis [%]") +
   geom_text(aes(x = "2020.3", y = 30), label = "Begin of\nCovid \npandemic",
+            hjust = "left", vjust = "top", nudge_x = 0.3, nudge_y = 0.5, check_overlap = TRUE) +
+  theme_classic()
+
+# absolute
+df_ed_monthly %>% 
+  ggplot(aes(x = adm_year_month, y = abs, group = f50_type, fill = f50_type)) + 
+  geom_area() +
+  # geom_col() +
+  scale_fill_discrete(type = gu_pref_colours, name = "ED Type", labels = c("AN", "BN", "oED")) +
+  guides(x = guide_axis(angle = -90)) + 
+  geom_vline(aes(xintercept = "2020.3"), show.legend = FALSE) +
+  labs(title = "number of monthly cases with ED diagnosis", 
+       x = "Year.Month", y = "number of cases with ED diagnosis") +
+  geom_text(aes(x = "2020.3", y = 12), label = "Begin of\nCovid \npandemic",
             hjust = "left", vjust = "top", nudge_x = 0.3, nudge_y = 0.5, check_overlap = TRUE) +
   theme_classic()
 ```
@@ -99,6 +114,7 @@ df_schoolclosures <- df_covid_periods_ed %>%
   mutate(status_no_hol = as_factor(status_no_hol),
          period_no_hol_end_year_week = fct_recode(period_no_hol_end_year_week, "2021.14" = "2021.13"))
 
+# relative
 # V1
 #TODO: this needs reformatting of df_schoolclosures to be facettable by covid_period_i
 df_ed_weekly %>% 
@@ -152,6 +168,36 @@ df_ed_weekly %>%
                    guide = guide_axis(angle = -90)) +
   labs(title = "weekly share of cases with ED diagnosis during Covid pandemic", 
        x = "Year.Week", y = "share of cases with ED diagnosis [%]") +
+  theme_classic()
+
+# absolute
+df_ed_weekly %>% 
+  ggplot(aes(x = adm_year_week, y = abs, group = f50_type)) + 
+  # school closure rectangles
+  geom_area() +
+  geom_rect(data = df_schoolclosures,
+            mapping = aes(xmin = period_no_hol_start_year_week, xmax = period_no_hol_end_year_week,
+                          group = status_no_hol, colour = status_no_hol, fill = status_no_hol),
+            ymin = 0, ymax = 5, inherit.aes = FALSE) +
+  scale_colour_discrete(aesthetics = c("colour", "fill"),
+                        type = set_names(gu_colours$greys, NULL),
+                        name = "School closure periods", labels = c("1" = "partial", "2" = "full (incl. holidays)")) +
+  new_scale_fill() +
+  # stacked area plot
+  geom_area(aes(fill = f50_type)) +
+  scale_fill_discrete(type = gu_pref_colours, name = "ED Type", labels = c("AN", "BN", "oED")) +
+  # labs
+  geom_vline(aes(xintercept = period_end_year_week), data = df_covid_periods_is_lockd) +
+  geom_text(aes(x = period_start_year_week, 
+                label = as_factor(period_i_is_lockd) %>%
+                  fct_recode(NULL = "1", "1st school closure" = "2", "2nd open period" = "3",
+                             "2nd school closure" = "4", "3rd open period" = "5")),
+            y = 5.15, hjust = "left", vjust = "top", nudge_x = 0.75,
+            data = df_covid_periods_is_lockd, inherit.aes = FALSE, na.rm = TRUE) +
+  scale_x_discrete(breaks = levels(df_ed_weekly$adm_year_week)[seq(1, length(levels(df_ed_weekly$adm_year_week)), 2)],
+                   guide = guide_axis(angle = -90)) +
+  labs(title = "number of weekly cases with ED diagnosis during Covid pandemic", 
+       x = "Year.Week", y = "number of cases with ED diagnosis") +
   theme_classic()
 ```
 
